--- a/scrape_data.ipynb
+++ b/scrape_data.ipynb
@@ -11,6 +11,7 @@
     "import db_functions\n",
     "import numpy as np\n",
     "import logging\n",
+    "from keys import private\n",
     "\n",
     "from enum import Enum, auto\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,13 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Open webpage, close cookie banner, wait for page to load and scroll to bottom\n",
     "chrome_driver = webdriver.WebDriver(False)\n",
-    "chrome_driver.open_webpage('https://www.zapimoveis.com.br/venda/imoveis/sc+balneario-camboriu/')\n",
+    "chrome_driver.open_webpage(private.SCRAPPING_WEBSITE)\n",
     "\n",
     "cookie_banner = chrome_driver.driver.find_elements_by_id('cookie-notifier-cta')\n",
     "if(len(cookie_banner) > 0):\n",
@@ -274,25 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NoSuchWindowException",
-     "evalue": "Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=112.0.5615.50)\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNoSuchWindowException\u001b[0m                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m existing_ids_in_db \u001b[39m=\u001b[39m get_existing_ids()\n\u001b[0;32m      6\u001b[0m amenities_dict \u001b[39m=\u001b[39m get_amenities_dict()\n\u001b[1;32m----> 8\u001b[0m listing_cards \u001b[39m=\u001b[39m chrome_driver\u001b[39m.\u001b[39;49mdriver\u001b[39m.\u001b[39;49mfind_elements_by_class_name(\u001b[39m'\u001b[39;49m\u001b[39mcard-container.js-listing-card\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      9\u001b[0m all_listings \u001b[39m=\u001b[39m []\n\u001b[0;32m     11\u001b[0m \u001b[39mfor\u001b[39;00m curr_listing \u001b[39min\u001b[39;00m listing_cards:\n\u001b[0;32m     12\u001b[0m \t\u001b[39m# Open listing\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Kriggs\\miniconda3\\envs\\WebScrapper\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:580\u001b[0m, in \u001b[0;36mWebDriver.find_elements_by_class_name\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    566\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfind_elements_by_class_name\u001b[39m(\u001b[39mself\u001b[39m, name):\n\u001b[0;32m    567\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    568\u001b[0m \u001b[39m    Finds elements by class name.\u001b[39;00m\n\u001b[0;32m    569\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    578\u001b[0m \u001b[39m        elements = driver.find_elements_by_class_name('foo')\u001b[39;00m\n\u001b[0;32m    579\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 580\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfind_elements(by\u001b[39m=\u001b[39;49mBy\u001b[39m.\u001b[39;49mCLASS_NAME, value\u001b[39m=\u001b[39;49mname)\n",
-      "File \u001b[1;32mc:\\Users\\Kriggs\\miniconda3\\envs\\WebScrapper\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:1005\u001b[0m, in \u001b[0;36mWebDriver.find_elements\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m   1001\u001b[0m         value \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m[name=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m]\u001b[39m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m value\n\u001b[0;32m   1003\u001b[0m \u001b[39m# Return empty list if driver returns null\u001b[39;00m\n\u001b[0;32m   1004\u001b[0m \u001b[39m# See https://github.com/SeleniumHQ/selenium/issues/4555\u001b[39;00m\n\u001b[1;32m-> 1005\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexecute(Command\u001b[39m.\u001b[39;49mFIND_ELEMENTS, {\n\u001b[0;32m   1006\u001b[0m     \u001b[39m'\u001b[39;49m\u001b[39musing\u001b[39;49m\u001b[39m'\u001b[39;49m: by,\n\u001b[0;32m   1007\u001b[0m     \u001b[39m'\u001b[39;49m\u001b[39mvalue\u001b[39;49m\u001b[39m'\u001b[39;49m: value})[\u001b[39m'\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mor\u001b[39;00m []\n",
-      "File \u001b[1;32mc:\\Users\\Kriggs\\miniconda3\\envs\\WebScrapper\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:321\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    319\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_executor\u001b[39m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    320\u001b[0m \u001b[39mif\u001b[39;00m response:\n\u001b[1;32m--> 321\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merror_handler\u001b[39m.\u001b[39;49mcheck_response(response)\n\u001b[0;32m    322\u001b[0m     response[\u001b[39m'\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_unwrap_value(\n\u001b[0;32m    323\u001b[0m         response\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[0;32m    324\u001b[0m     \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\Kriggs\\miniconda3\\envs\\WebScrapper\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:242\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    240\u001b[0m         alert_text \u001b[39m=\u001b[39m value[\u001b[39m'\u001b[39m\u001b[39malert\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m    241\u001b[0m     \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)\n\u001b[1;32m--> 242\u001b[0m \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[1;31mNoSuchWindowException\u001b[0m: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=112.0.5615.50)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Scrapping loop\n",
     "currentState = SearchingState.SEARCHING\n",
@@ -340,7 +325,9 @@
     "\n",
     "\t\t# Appends to all listings, closes tab, switch to listings tab and wait\n",
     "\t\tall_listings.append(listing)\n",
-    "\n",
+    "\t\tprint('Added new listing')\n",
+    "\t\tprint(listing)\n",
+    "\t\tprint('-'*20)\n",
     "\t\tchrome_driver.random_sleep(long=True)\n",
     "\t\tchrome_driver.driver.close()\n",
     "\t\tchrome_driver.driver.switch_to.window(chrome_driver.driver.window_handles[0])\n",
