--- a/scrape_data.ipynb
+++ b/scrape_data.ipynb
@@ -79,8 +79,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function get amenities\n",
     "def get_amenities_dict() -> dict:\n",
+    "\t\"\"\" \t\n",
+    "\tReturns:\n",
+    "\t\tdict: all amenities types that are inserted in the amenities table\n",
+    "\t\"\"\"\n",
     "\tdb_cursor.execute(\"\"\"\n",
     "\tSELECT `COLUMN_NAME` \n",
     "\tFROM `INFORMATION_SCHEMA`.`COLUMNS` \n",
@@ -100,7 +103,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_amenities_to_db(listings:dict, amenities_dict:dict):\n",
+    "def write_amenities_to_db(listings:dict, amenities_dict:dict) -> None:\n",
+    "\t\"\"\" Write the amenities to database\n",
+    "\n",
+    "\tArgs:\n",
+    "\t\tlistings (list[dict]): dict will all listing to insert in the database\n",
+    "\t\tamenities_dict (dict): dictionary of all amenities types\n",
+    "\n",
+    "\tReturns:\n",
+    "\t\tNone\n",
+    "\t\"\"\"\n",
     "\tdb_cursor.execute('SELECT `id`, `id_external` FROM `dados-imoveis`')\n",
     "\tdb.commit()\n",
     "\n",
@@ -166,8 +178,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to write listings to DB\n",
     "def write_listings_to_db(listings: list[dict], amenities_dict: dict) -> None:\n",
+    "\t\"\"\" Write listings to Database\n",
+    "\n",
+    "\tArgs:\n",
+    "\t\tlistings (list[dict]): all listings\n",
+    "\t\tamenities_dict (dict): all amenities types\n",
+    "\n",
+    "\tReturns:\n",
+    "\t\tNone\n",
+    "\t\"\"\"\n",
     "\tfor i, i_lin in enumerate(listings):\n",
     "\t\tif i_lin[ListingFields.price.name] in ['NULL', '0']:\n",
     "\t\t\tdel listings[i]\n",
@@ -209,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create func to get existing external ids\n",
+    "# The existing external id's are used to not scrape duplicated listings\n",
     "def get_existing_ids() -> list[int]:\n",
     "\tdb_cursor.execute('SELECT `id_external` FROM `dados-imoveis`')\n",
     "\tdb.commit()\n",
@@ -223,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Javascript to hide newsletter DIV\n",
+    "# Javascript to hide newsletter DIV - to be injected\n",
     "javascript_hide_newsletter = \"\"\"\n",
     "var observer = new MutationObserver(function(mutations) {\n",
     "    mutations.forEach(function(mutation) {\n",
@@ -283,8 +303,8 @@
     "currentState = SearchingState.SEARCHING\n",
     "\n",
     "while(currentState == SearchingState.SEARCHING):\n",
-    "\texisting_ids_in_db = get_existing_ids()\n",
-    "\tamenities_dict = get_amenities_dict()\n",
+    "\texisting_ids_in_db = get_existing_ids() # To not scrape duplicated ids\n",
+    "\tamenities_dict = get_amenities_dict() # To be passed into the insertion funcitons and not be called more than once per page\n",
     "\n",
     "\tlisting_cards = chrome_driver.driver.find_elements_by_class_name('card-container.js-listing-card')\n",
     "\tall_listings = []\n",
@@ -293,10 +313,11 @@
     "\t\t# Open listing\n",
     "\t\tlisting_id = curr_listing.get_attribute('data-id')\n",
     "\n",
+    "\t\t# Skip to next if already scrapped\n",
     "\t\tif int(listing_id) in existing_ids_in_db:\n",
     "\t\t\tcontinue\n",
     "\t\t\n",
-    "\t\t# Wait for current listing is into view\n",
+    "\t\t# Wait for current listing to be into view\n",
     "\t\tcurr_listing.location_once_scrolled_into_view\n",
     "\t\tWebDriverWait(chrome_driver.driver, 30).until(\n",
     "\t\t\tEC.element_to_be_clickable((By.CSS_SELECTOR, f'[data-id=\"{listing_id}\"]'))\n",
@@ -311,6 +332,7 @@
     "\n",
     "\t\tfor i_field in ListingFields:\n",
     "\t\t\tfield = chrome_driver.driver.find_elements_by_css_selector(i_field.value)\n",
+    "\t\t\t# Checking if it has anything, otherwise inserts NULL, as per standard\n",
     "\t\t\tif len(field) > 0:\n",
     "\t\t\t\tlisting[i_field.name] = field[0].text\n",
     "\t\t\telse:\n",
@@ -325,19 +347,21 @@
     "\n",
     "\t\t# Appends to all listings, closes tab, switch to listings tab and wait\n",
     "\t\tall_listings.append(listing)\n",
-    "\t\tprint('Added new listing')\n",
-    "\t\tprint(listing)\n",
-    "\t\tprint('-'*20)\n",
+    "\t\t# print('Added new listing')\n",
+    "\t\t# print(listing)\n",
+    "\t\t# print('-'*20)\n",
     "\t\tchrome_driver.random_sleep(long=True)\n",
     "\t\tchrome_driver.driver.close()\n",
     "\t\tchrome_driver.driver.switch_to.window(chrome_driver.driver.window_handles[0])\n",
     "\n",
+    "\t# Dumps whole page into Database\n",
     "\twrite_listings_to_db(listings=all_listings, amenities_dict=amenities_dict)\n",
     "\t\n",
-    "\t# Next page\n",
+    "\t# Next page button\n",
     "\tpage_buttons = chrome_driver.driver.find_elements_by_css_selector('li:has(button.pagination__button--active) + li')\n",
     "\tcurrent_page = int(chrome_driver.driver.find_element_by_css_selector('.pagination__button--active').text)\n",
     "\n",
+    "\t# try to go to next page if possible - the maximum number of pages on the website is 100\n",
     "\tif(len(page_buttons) > 0 and current_page != '100'):\n",
     "\t\t\n",
     "\t\tpage_buttons[0].location_once_scrolled_into_view\n",
@@ -357,6 +381,7 @@
     "\n",
     "\t\tchrome_driver.random_sleep(long=True)\n",
     "\telse:\n",
+    "\t\t# If can't find next page then scrapping is completed\n",
     "\t\tcurrentState = SearchingState.COMPLETED"
    ]
   }
