Updated scrape data

--- a/scrape_data.ipynb
+++ b/scrape_data.ipynb
@@ -116,20 +116,24 @@
     "\tdb_cursor.execute('SELECT `id`, `id_external` FROM `dados-imoveis`')\n",
     "\tdb.commit()\n",
     "\n",
+    "\t# Dict for the relational database ids\n",
     "\tdict_ids = {str(i[1]):i[0] for i in db_cursor}\n",
     "\tlisting_amenities = []\n",
     "\n",
+    "\t# Creates a new list with the amenities now in their own list\n",
     "\tfor i in listings:\n",
     "\t\tlisting_amenities.append({\n",
     "\t\t\t'id':dict_ids[i['id_external']],\n",
     "\t\t\t'amenities': i['amenities'].lower().replace(' ', '_').split(sep='\\n')\n",
     "\t\t})\n",
     "\n",
+    "\n",
     "\tfor i in listing_amenities:\n",
+    "\t\t# If there are no amenities skip\n",
     "\t\tif i['amenities'][0] == 'null':\n",
     "\t\t\tcontinue\n",
     "\n",
-    "\t\t# Checks if any column doesn't exist in DB\n",
+    "\t\t# Checks if any column doesn't exist in DB, then inserts it\n",
     "\t\tfor j in i['amenities']:\n",
     "\t\t\tif j not in amenities_dict:\n",
     "\t\t\t\tdb_cursor.execute(f\"\"\"\n",
@@ -143,28 +147,36 @@
     "\t\t\n",
     "\tlist_to_update = np.array([])\n",
     "\n",
+    "\t# Prepares to insert the current amenities listing\n",
     "\tfor i_list in listing_amenities:\n",
+    "\t\t# Creates an all false amenities, as in no amenities are present\n",
+    "\t\t# then runs through the amenities and checks as true the ones the are present\n",
+    "\t\t# in the current listing\n",
+    "\n",
     "\t\ttemp_list = np.full(len(amenities_dict), 'False')\n",
     "\t\t\n",
     "\t\tif i_list['amenities'][0] != 'null':\n",
     "\t\t\tfor i_amenity in i_list['amenities']:\n",
     "\t\t\t\ttemp_list[i_amenity] = 'True'\n",
     "\n",
-    "\t\t\n",
+    "\t\t# Insert the house_id for the relational dabatase as the first entry\n",
     "\t\ttemp_list = np.insert(temp_list, 0, i_list['id'])\n",
     "\n",
+    "\t\t# Checks if it has to update the list or insert the first item\n",
     "\t\tif len(list_to_update) > 0:\n",
     "\t\t\tlist_to_update = np.vstack((list_to_update, temp_list.copy()))\n",
     "\t\telse:\n",
     "\t\t\tlist_to_update = [temp_list.copy()]\n",
     "\n",
+    "\t# Creates the SQL Statement\n",
     "\tinsert_query = f'INSERT INTO `amenities` (`house_id`, `{\"`, `\".join(list(amenities_dict.keys()))}`)\\n'\n",
     "\tinsert_query += f'VALUES\\n'\n",
-    "\n",
+    "\t\n",
     "\tfor lin in list_to_update:\n",
     "\t\tsubbed = re.sub(string=str(lin), pattern='(\\' \\'|\\'\\n \\'|\\' \\n\\')', repl=', ')\n",
-    "\t\tinsert_query += f'{chr(9)}(' + re.sub(pattern='(?:\\n|\\[|\\]|\\')', repl='', string=subbed) + '),\\n'\n",
-    "\t\t\n",
+    "\t\tinsert_query += f'{TAB_CHAR}(' + re.sub(pattern='(?:\\n|\\[|\\]|\\')', repl='', string=subbed) + '),\\n'\n",
+    "\t\n",
+    "\t# Inserts semicolon an end\n",
     "\tinsert_query =  re.sub(pattern=',(?!,)$', repl=';', string=insert_query)\n",
     "\n",
     "\tlogging.info('Amenities insert:\\n' + insert_query)\n",
@@ -188,6 +200,8 @@
     "\tReturns:\n",
     "\t\tNone\n",
     "\t\"\"\"\n",
+    "\n",
+    "\t# Removes the listing if the price or name is NULL or 0\n",
     "\tfor i, i_lin in enumerate(listings):\n",
     "\t\tif i_lin[ListingFields.price.name] in ['NULL', '0']:\n",
     "\t\t\tdel listings[i]\n",
@@ -197,6 +211,7 @@
     "\tif len(listings) == 0:\n",
     "\t\treturn '0 listings'\n",
     "\n",
+    "\t# Creates SQL query\n",
     "\tinsert_query = 'INSERT INTO `dados-imoveis` (\\n'\n",
     "\n",
     "\tfor i_field in all_listings[0]:\n",
@@ -212,7 +227,7 @@
     "\t\tcurr_values = TAB_CHAR + '(' + curr_values[1:-1] + ')'\n",
     "\t\tinsert_query += curr_values + ',\\n'\n",
     "\n",
-    "\t# Removes trailing comma and replaces string null or 0 with DB null\n",
+    "\t# Removes trailing comma and replaces the python string \"null\" or 0 with MySQL null\n",
     "\tinsert_query = insert_query[:-2]\n",
     "\tinsert_query = insert_query.replace(\"'NULL'\", 'NULL').replace(\"'0'\", \"NULL\")\n",
     "\n",
